--- a/Client_Fundacion_Primavera/index.html
+++ b/Client_Fundacion_Primavera/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/icons/" />
+    <link rel="icon" type="image/png" href="/src/assets/icons/FundacionIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    
     <title>Primavera</title>
   </head>
   <body>
